--- a/ui_lovelace_minimalist/dashboard/views/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/kitchen.yaml
@@ -37,7 +37,7 @@ cards:
           ulm_card_graph_line_width: 5
   - type: "custom:button-card"
     template: card_title
-    name: Devices
+    name: Lumières
 
   - type: horizontal-stack
     cards:
@@ -47,6 +47,10 @@ cards:
         variables:
           ulm_card_light_enable_color: true
           ulm_card_light_force_background_color: true
+
+  - type: "custom:button-card"
+    template: card_title
+    name: Appareils
 
   - type: custom:stack-in-card
     title: Lave-vaisselle
