--- a/ui_lovelace_minimalist/dashboard/views/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/office.yaml
@@ -36,6 +36,10 @@ cards:
           ulm_card_graph_group_by: interval
           ulm_card_graph_line_width: 5
 
+  - type: "custom:button-card"
+    template: card_title
+    name: Lumières
+
   - type: horizontal-stack
     cards:
       - type: "custom:button-card"
@@ -52,6 +56,13 @@ cards:
           ulm_card_light_name: Lampe RGBW Bureau Mathieu
           ulm_card_light_enable_color: true
           ulm_card_light_force_background_color: true
+
+  - type: "custom:button-card"
+    template: card_title
+    name: Appareils
+
+  - type: horizontal-stack
+    cards:
       - type: "custom:button-card"
         template: "custom_card_vncntdev_device_tracker"
         entity: switch.wol_m3te0r_pc
