--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -3,12 +3,28 @@ path: "home"
 icon: "mdi:flower"
 type: custom:vertical-layout
 cards:
-  - type: "custom:button-card"
-    template: chip_temperature
-    variables:
-      ulm_chip_temperature_inside: sensor.capteur_temperaure_humidite_salon_temperature
-      ulm_chip_temperature_outside: sensor.outside_temperature
-      ulm_chip_temperature_weather: weather.bordeaux
+  - type: custom:mushroom-chips-card
+    chips:
+      - type: entity
+        entity: sensor.time
+      - type: weather
+        entity: weather.bordeaux
+        show_temperature: true
+        show_conditions: true
+      - type: entity
+        entity: sensor.capteur_temperaure_humidite_salon_temperature
+      - type: alarm-control-panel
+        entity: alarm_control_panel.alarmo
+      - type: template
+        content: >-
+          {{ "⚡" + state_attr('sensor.myenedis_50080550746371', 'yesterday_HCHP') +
+          " kWh" + " 💰" + state_attr('sensor.myenedis_50080550746371',
+          'daily_cost') + " €" }}
+        entity: sensor.myenedis_50080550746371
+        icon: ""
+        tap_action:
+          action: more-info
+    alignment: center
   - type: "custom:button-card"
     template: "card_esh_welcome"
     triggers_update: "input_boolean.minimalist_dropdown"
@@ -94,13 +110,13 @@ cards:
           - card_esh_room
           - yellow_on
         name: Cuisine
-        entity: light.ampoule_w_couloir_cuisine_salon
+        entity: light.interrupteur_aqara_entree_left
         icon: mdi:fridge
         tap_action:
           action: navigate
           navigation_path: "kitchen"
         variables:
-          ulm_custom_card_esh_room_light_entity: light.ampoule_w_couloir_cuisine_salon
+          ulm_custom_card_esh_room_light_entity: light.interrupteur_aqara_entree_left
         label: >
           [[[
             return "🌡️" + states['sensor.capteur_temperaure_humidite_cuisine_temperature'].state + " °C" + "<br /> 💧" + states['sensor.capteur_temperaure_humidite_cuisine_humidity'].state + " %"
