--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 !ui_lovelace_minimalist/custom_cards
 !ui_lovelace_minimalist/dashboard
 !ui_lovelace_minimalist/dashboard/views
-
+!screenshots/
 
 # Ignore folders.
 .storage
