--- a/ui_lovelace_minimalist/dashboard/views/bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/bedroom.yaml
@@ -1,12 +1,12 @@
-title: "Chambre"
-path: "bedroom"
-icon: "mdi:bed-double"
-type: custom:vertical-layout
+type: vertical-stack
 cards:
-  - type: "custom:button-card"
-    template: chip_back
-    variables:
-      ulm_chip_back_path: home
+  - type: custom:bubble-card
+    card_type: pop-up
+    hash: "#pop-up-bedroom"
+    entity: light.lampe_rgbw_bureau_pc
+    name: Chambre
+    state: sensor.capteur_temperature_humidite_chambre_temperature
+    back_open: true
   - type: "custom:button-card"
     template: card_title
     name: Chambre
