--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,16 +4,19 @@ default_config:
 # Load frontend themes from the themes folder
 frontend:
   themes: !include_dir_merge_named themes
+  extra_module_url:
+    - /hacsfiles/lovelace-card-mod/card-mod.js
 
 homeassistant:
   allowlist_external_dirs:
     - /config
+    - /config/www
   customize:
     zone.home:
-      radius: 70
+      radius: 60
 
 recorder:
-  purge_keep_days: 200
+  purge_keep_days: 90
   exclude:
     entities:
       - climate.thermostat
